Fix poor contrast attempt #3

--- a/index.css
+++ b/index.css
@@ -165,6 +165,6 @@ input {
     cursor: pointer;
 }
 
-.footertxt {
+/*.footertxt {
     color: var(--bg1);
-}
+}*/
